2011-07-02  Sebastian Pipping <sebastian@pipping.org>

	* Make xmp_utimens of examples "fusexmp" and "fusexmp_fh"
	not follow symlinks as other layers do that already.

2011-06-02  Miklos Szeredi <miklos@szeredi.hu>

	* Add "remember" option.  This works similar to "noforget" except
	that eventually the node will be allowed to expire from the cache.
	Patch by therealneworld@gmail.com

2011-05-27  Miklos Szeredi <miklos@szeredi.hu>

	* Check if splice/vmsplice are supported

2011-05-26  Miklos Szeredi <miklos@szeredi.hu>

	* Remove -lrt -ldl from fuse.pc for dynamic linking since
	libfuse.so is already linked with these libraries.  Reported by:
	Nikolaus Rath

2011-05-20  Miklos Szeredi <miklos@szeredi.hu>

	* Cleaner build output.  Patch by Reuben Hawkins

2011-05-19  Miklos Szeredi <miklos@szeredi.hu>

	* Disable splice by default, add "splice_read", "splice_write" and
	"splice_move" options.  Keep the "no_splice_*" variants, which can
	disable splice even if the filesystem explicitly enables it.

2011-04-15  Max Krasnyansky <maxk@kernel.org>
	* Added support for "auto_unmount" option which unmounts the
	filesystem automatically on process exit (or crash).

2011-03-30  Miklos Szeredi <miklos@szeredi.hu>

	* Patches by Laszlo Papp fixing various issues found by the
	Coverity checker

2011-03-11  Miklos Szeredi <miklos@szeredi.hu>

	* In case of failure to add to /etc/mtab don't umount.  Reported
	by Marc Deslauriers

2011-02-02  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: In fuse_session_loop_mt() don't pause when exiting the
	worker threads.  The pause() was added in 2.2.1 to prevent
	segfault on pthread_cancel() on an exited, detached thread.  Now
	worker threads are not detached and pthread_cancel() should work
	fine even after the thread exited.  Reported by Boris Protopopov

2011-01-31  Miklos Szeredi <miklos@szeredi.hu>

	* fusermount: chdir to / before performing mount/umount

	* fusermount: only allow mount and umount if util-linux supports